<resources>
    <string name="app_name">Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">spk</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="database_manager">DB Manager</string>
    <string name="lastxdays">Last 7 days</string>
    <string name="number_placeholder">8.3</string>
    <string name="send_feedback">Send feedback</string>
    <string name="about">About</string>
    <string name="help">Help</string>
</resources>
